# IntelligentRobotics2025

OpenCV/: 1_Getting_Started_with_Images.ipynb  2_Images_Manipulations_Resize_Flip_Modify.ipynb
OpenCr/classContent/: classContent.ino  dynamix.h  songs.h
my_robot/: setup.py
serial_teleop/: package.xml  setup.py
snelheid_teleop/: package.xml  setup.cfg  setup.py
spheroball/: driveWithJoystick.py
