<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<?xml version="1.0"?>
<package format="3">
  <name>serial_teleop</name>
  <version>0.0.1</version>
  <description>Simple keyboard teleoperation for robot</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>

</package>

